--- a/test.ipynb
+++ b/test.ipynb
@@ -45,7 +45,8 @@
    "source": [
     "fp=[1,1]\n",
     "if str(fp[0]).isdigit() :\n",
-    "    print(1)"
+    "    print(1)\n",
+    "    print(454)"
    ]
   }
  ],
